--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,7 @@
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto gap-4">
 
+        <li class="nav-item"><a class="nav-link" href="#hero">Hero</a></li>
         <li class="nav-item"><a class="nav-link" href="#destinations">Discover</a></li>
         <li class="nav-item"><a class="nav-link" href="#" [routerLink]="['/features']">Features</a></li>
         <li class="nav-item"><a class="nav-link" href="#" [routerLink]="['/details']">About us</a></li>
